Added more functions to quick launch database.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -126,25 +126,66 @@
 	"Dialogue Set Actor Dialogue Control": "{\"function\":33,\"dialogue_function\":13}",
 	"Dialogue Choice": "{\"function\":33,\"dialogue_function\":14}",
 	"Dialogue Clear": "{\"function\":33,\"dialogue_function\":15}",
+	"Display Image": "{\"function\":21}",
+	"Display Text": "{\"function\":20}",
+	"Go To Line": "{\"function\":7}",
+	"Load Level": "{\"function\":22}",
+	"On Character Enter": "{\"function\":8,\"hotspot_trigger_type\":0}",
+	"On Character Exit": "{\"function\":8,\"hotspot_trigger_type\":1}",
+	"While Character Inside": "{\"function\":8,\"hotspot_trigger_type\":2}",
+	"While Character Outside": "{\"function\":8,\"hotspot_trigger_type\":3}",
+	"On item Enter": "{\"function\":8,\"hotspot_trigger_type\":4}",
+	"On item Exit": "{\"function\":8,\"hotspot_trigger_type\":5}",
+	"While Item Inside": "{\"function\":8,\"hotspot_trigger_type\":6}",
+	"While Item Outside": "{\"function\":8,\"hotspot_trigger_type\":7}",
+	"On Object Enter": "{\"function\":8,\"hotspot_trigger_type\":8}",
+	"On Object Exit": "{\"function\":8,\"hotspot_trigger_type\":9}",
+	"While Object Inside": "{\"function\":8,\"hotspot_trigger_type\":10}",
+	"While Object Outside": "{\"function\":8,\"hotspot_trigger_type\":11}",
+	"On Input Button Pressed": "{\"function\":26,\"input_type\":0}",
+	"On Input Type Text": "{\"function\":26,\"input_type\":1}",
+	"On Input Button Down": "{\"function\":26,\"input_type\":2}",
+	"On Input Button Up": "{\"function\":26,\"input_type\":3}",
+	"On Input Multi Input": "{\"function\":26,\"input_modes\":1}",
+	"Play Music": "{\"function\":18,\"on_event\":false}",
+	"Play Music In Combat": "{\"function\":18,\"on_event\":true,\"music_event\":0}",
+	"Play Music Player Died": "{\"function\":18,\"on_event\":true,\"music_event\":1}",
+	"Play Music Enemies Defeated": "{\"function\":18,\"on_event\":true,\"music_event\":2}",
+	"Play Music Ambient": "{\"function\":18,\"on_event\":true,\"music_event\":3}",
 	"Play Sound": "{\"function\":6,\"play_sound_method\":0}",
 	"Play Sound At Location": "{\"function\":6,\"play_sound_method\":1}",
 	"Play Sound Loop": "{\"function\":6,\"play_sound_method\":2}",
-    "Play Sound Loop At Location": "{\"function\":6,\"play_sound_method\":3}",
+	"Play Sound Loop At Location": "{\"function\":6,\"play_sound_method\":3}",
 	"Play Sound Group": "{\"function\":6,\"play_sound_method\":4,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
 	"Play Sound Group With Gain": "{\"function\":6,\"play_sound_method\":5,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
 	"Play Sound Group At Location": "{\"function\":6,\"play_sound_method\":6,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
 	"Play Sound Group With Gain At Location": "{\"function\":6,\"play_sound_method\":7,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
 	"Play Sound Group At Location With Priority": "{\"function\":6,\"play_sound_method\":8,\"sound_path\":\"Data/Sounds/footstep_mud.xml\"}",
+	"Stop Sounds": "{\"function\":6,\"play_sound_method\":9}",
+	"Read Savefile": "{\"function\":32,\"read_write_mode\":0}",
+	"Write Savefile": "{\"function\":32,\"read_write_mode\":1}",
+	"Send Character Message": "{\"function\":29}",
 	"Wait For Level Message": "{\"function\":1}",
+	"Send Level Message": "{\"function\":10}",
+	"Send Global Level Message": "{\"function\":10,\"level_message_type\":1}",
+	"Set Bone Inflate Right Ear": "{\"function\":28,\"bone_name\":\"rightear\"}",
+	"Set Bone Inflate Left Ear": "{\"function\":28,\"bone_name\":\"leftear\"}",
+	"Set Bone Inflate Right Arm": "{\"function\":28,\"bone_name\":\"rightarm\"}",
+	"Set Bone Inflate Head": "{\"function\":28,\"bone_name\":\"head\"}",
+	"Set Bone Inflate Torso": "{\"function\":28,\"bone_name\":\"torso\"}",
+	"Set Bone Inflate Tail": "{\"function\":28,\"bone_name\":\"tail\"}",
+	"Set Bone Inflate Right Leg": "{\"function\":28,\"bone_name\":\"right_leg\"}",
+	"Set Bone Inflate Left Leg": "{\"function\":28,\"bone_name\":\"left_leg\"}",
+	"Set Bone Inflate Left Hand": "{\"function\":28,\"bone_name\":\"lefthand\"}",
+	"Set Bone Inflate Right Hand": "{\"function\":28,\"bone_name\":\"righthand\"}",
+	"Set Bone Inflate Left Fingers": "{\"function\":28,\"bone_name\":\"leftfingers\"}",
+	"Set Bone Inflate Right Fingers": "{\"function\":28,\"bone_name\":\"rightfingers\"}",
+	"Set Bone Inflate Left Thumb": "{\"function\":28,\"bone_name\":\"leftthumb\"}",
+	"Set Bone Inflate Right Thumb": "{\"function\":28,\"bone_name\":\"rightthumb\"}",
+	"Set Bone Inflate Index": "{\"function\":28,\"bone_name\":\"index\"}",
 	"Wait": "{\"function\":2}",
 	"Set Enabled": "{\"function\":3}",
 	"Set Character": "{\"function\":4}",
-	"Go To Line": "{\"function\":7}",
-	"On Character Enter": "{\"function\":8,\"hotspot_trigger_type\":0}",
-	"On Character Exit": "{\"function\":8,\"hotspot_trigger_type\":1}",
-	"While Character Inside": "{\"function\":8,\"hotspot_trigger_type\":3}",
-	"While Character Outside": "{\"function\":8,\"hotspot_trigger_type\":4}",
-	"Send Level Message": "{\"function\":10}",
 	"Start Dialogue": "{\"function\":11}",
 	"Set Object Parameter": "{\"function\":12}",
 	"Set Level Parameter Achievements": "{\"function\":13,\"level_param\":0}",
@@ -169,22 +210,9 @@
 	"Transform Object": "{\"function\":16}",
 	"Set Color Tint": "{\"function\":17,\"color_type\":0}",
 	"Set Color Palette": "{\"function\":17,\"color_type\":1}",
-	"Play Music": "{\"function\":18,\"on_event\":false}",
-	"Play Music In Combat": "{\"function\":18,\"on_event\":true,\"music_event\":0}",
-	"Play Music Player Died": "{\"function\":18,\"on_event\":true,\"music_event\":1}",
-	"Play Music Enemies Defeated": "{\"function\":18,\"on_event\":true,\"music_event\":2}",
-	"Play Music Ambient": "{\"function\":18,\"on_event\":true,\"music_event\":3}",
-	"Display Text": "{\"function\":20}",
-	"Display Image": "{\"function\":21}",
-	"Load Level": "{\"function\":22}",
 	"Set Velocity": "{\"function\":24}",
 	"Slow Motion": "{\"function\":25}",
-	"On Input": "{\"function\":26}",
 	"Set Morph Target": "{\"function\":27}",
-	"Set Bone Inflate": "{\"function\":28}",
-	"Send Character Message": "{\"function\":29}",
-	"Read Savefile": "{\"function\":32,\"read_write_mode\":0}",
-	"Write Savefile": "{\"function\":32,\"read_write_mode\":1}",
 	"User Interface Image": "{\"function\":36,\"image_path\":\"Textures/ui/menus/credits/overgrowth.png\",\"position\":[955,215],\"size\":[720,240],\"ui_function\":1}",
 	"User Interface Text": "{\"function\":36,\"position\":[1025,225],\"rotation\":0,\"text_content\":\"Example Text\",\"ui_function\":2,\"use_fade_in\":false,\"use_move_in\":false}",
 	"User Interface Clear": "{\"function\":36,\"ui_function\":0}",
