Added more functions to the quick launch database.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -183,11 +183,16 @@
 	"Set Bone Inflate Left Thumb": "{\"function\":28,\"bone_name\":\"leftthumb\"}",
 	"Set Bone Inflate Right Thumb": "{\"function\":28,\"bone_name\":\"rightthumb\"}",
 	"Set Bone Inflate Index": "{\"function\":28,\"bone_name\":\"index\"}",
-	"Wait": "{\"function\":2}",
-	"Set Enabled": "{\"function\":3}",
+	"Set Camera Parameter Tint": "{\"function\":14,\"camera_param\":0}",
+	"Set Camera Parameter Vignette Tint": "{\"function\":14,\"camera_param\":1}",
+	"Set Camera Parameter FOV": "{\"function\":14,\"camera_param\":2}",
+	"Set Camera Parameter DOF": "{\"function\":14,\"camera_param\":3}",
+	"Set Camera Parameter Splitscreen": "{\"function\":14,\"camera_param\":4}",
 	"Set Character": "{\"function\":4}",
-	"Start Dialogue": "{\"function\":11}",
-	"Set Object Parameter": "{\"function\":12}",
+	"Set Color Tint": "{\"function\":17,\"color_type\":0}",
+	"Set Color Palette": "{\"function\":17,\"color_type\":1}",
+	"Set Enabled True": "{\"function\":3,\"enabled\":true}",
+	"Set Enabled False": "{\"function\":3,\"enabled\":false}",
 	"Set Level Parameter Achievements": "{\"function\":13,\"level_param\":0}",
 	"Set Level Parameter Custom Shaders": "{\"function\":13,\"level_param\":1}",
 	"Set Level Parameter Fog Amount": "{\"function\":13,\"level_param\":2}",
@@ -206,15 +211,30 @@
 	"Set Level Parameter Sun Color": "{\"function\":13,\"level_param\":15}",
 	"Set Level Parameter Sun Intensity": "{\"function\":13,\"level_param\":16}",
 	"Set Level Parameter Other": "{\"function\":13,\"level_param\":17}",
-	"Set Camera Parameter": "{\"function\":14}",
-	"Transform Object": "{\"function\":16}",
-	"Set Color Tint": "{\"function\":17,\"color_type\":0}",
-	"Set Color Palette": "{\"function\":17,\"color_type\":1}",
-	"Set Velocity": "{\"function\":24}",
-	"Slow Motion": "{\"function\":25}",
 	"Set Morph Target": "{\"function\":27}",
-	"User Interface Image": "{\"function\":36,\"image_path\":\"Textures/ui/menus/credits/overgrowth.png\",\"position\":[955,215],\"size\":[720,240],\"ui_function\":1}",
-	"User Interface Text": "{\"function\":36,\"position\":[1025,225],\"rotation\":0,\"text_content\":\"Example Text\",\"ui_function\":2,\"use_fade_in\":false,\"use_move_in\":false}",
+	"Set Morph Target Two Way": "{\"function\":27,\"two_way_morph\":true}",
+	"Set Object Parameter String": "{\"function\":12,\"param_type\":0}",
+	"Set Object Parameter Integer": "{\"function\":12,\"param_type\":1}",
+	"Set Object Parameter Float": "{\"function\":12,\"param_type\":2}",
+	"Set Velocity With Placeholder": "{\"function\":24,\"add_velocity\":false,\"set_velocity_mode\":0}",
+	"Set Velocity Towards Target": "{\"function\":24,\"add_velocity\":false,\"set_velocity_mode\":1}",
+	"Set Velocity Multiplier": "{\"function\":24,\"add_velocity\":false,\"set_velocity_mode\":2}",
+	"Add Velocity With Placeholder": "{\"function\":24,\"add_velocity\":true,\"set_velocity_mode\":0}",
+	"Add Velocity Towards Target": "{\"function\":24,\"add_velocity\":true,\"set_velocity_mode\":1}",
+	"Add Velocity Multiplier": "{\"function\":24,\"add_velocity\":true,\"set_velocity_mode\":2}",
+	"Slow Motion": "{\"function\":25}",
+	"Start Dialogue": "{\"function\":11}",
+	"Transform To Placeholder": "{\"function\":16,\"transform_mode\":0}",
+	"Transform To Target": "{\"function\":16,\"transform_mode\":1}",
+	"Transform Move To Target": "{\"function\":16,\"transform_mode\":2}",
+	"Transform Specific": "{\"function\":16,\"transform_mode\":3}",
+	"Transform To Hotspot": "{\"function\":16,\"transform_mode\":4}",
 	"User Interface Clear": "{\"function\":36,\"ui_function\":0}",
-	"User Interface Font": "{\"function\":36,\"ui_function\":3}"
+	"User Interface Image": "{\"function\":36,\"ui_function\":1}",
+	"User Interface Text": "{\"function\":36,\"ui_function\":2}",
+	"User Interface Font": "{\"function\":36,\"ui_function\":3}",
+	"User Interface Button": "{\"function\":36,\"ui_function\":4}",
+	"User Interface Input Box": "{\"function\":36,\"ui_function\":5}",
+	"User Interface Fullscreen Image": "{\"function\":36,\"ui_function\":6}",
+	"Wait": "{\"function\":2}"
 }
