Cleaned up music feature.

--- a/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
+++ b/drika_hotspot/Data/Scripts/drika_quick_launch_database.json
@@ -147,11 +147,12 @@
 	"On Input Button Down": "{\"function\":26,\"input_type\":2}",
 	"On Input Button Up": "{\"function\":26,\"input_type\":3}",
 	"On Input Multi Input": "{\"function\":26,\"input_modes\":1}",
-	"Play Music": "{\"function\":18,\"on_event\":false}",
-	"Play Music In Combat": "{\"function\":18,\"on_event\":true,\"music_event\":0}",
-	"Play Music Player Died": "{\"function\":18,\"on_event\":true,\"music_event\":1}",
-	"Play Music Enemies Defeated": "{\"function\":18,\"on_event\":true,\"music_event\":2}",
-	"Play Music Ambient": "{\"function\":18,\"on_event\":true,\"music_event\":3}",
+	"Play Music Song": "{\"function\":18,\"music_mode\":0}",
+	"Play Music Song In Combat": "{\"function\":18,\"music_mode\":1}",
+	"Play Music Song When Player Died": "{\"function\":18,\"music_mode\":2}",
+	"Play Music Song When Enemies Defeated": "{\"function\":18,\"music_mode\":3}",
+	"Play Music Song Ambient": "{\"function\":18,\"music_mode\":4}",
+	"Play Music Silence": "{\"function\":18,\"music_mode\":5}",
 	"Play Sound": "{\"function\":6,\"play_sound_method\":0}",
 	"Play Sound At Location": "{\"function\":6,\"play_sound_method\":1}",
 	"Play Sound Loop": "{\"function\":6,\"play_sound_method\":2}",
